--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-sniffer",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Middleware for Express, Koa, and Fastify to log API requests and responses with CLI dashboard",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -109,11 +109,15 @@
   ],
   "sideEffects": false,
   "devDependencies": {
+    "@koa/router": "^12.0.0",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.5.1",
+    "fastify": "^4.24.3",
+    "koa": "^2.14.2",
+    "koa-bodyparser": "^4.4.1",
     "rimraf": "^6.0.1",
     "terser": "^5.44.0",
-    "koa": "^2.14.2",
-    "@koa/router": "^12.0.0",
-    "koa-bodyparser": "^4.4.1",
-    "fastify": "^4.24.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
