--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-sniffer",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Middleware for Express, Koa, and Fastify to log API requests and responses with CLI dashboard",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -80,6 +80,7 @@
     "cli-table3": "^0.6.3",
     "commander": "^9.4.1",
     "express": ">=4.0.0",
+    "figlet": "^1.9.3",
     "ws": "^8.14.2"
   },
   "peerDependencies": {
